feat: logica gestione permessi collaboratori - closes #51